// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform ineligible record with hearing date in past into eligible criteria 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usMoInRestrictiveHousing": {
      "confinementType": "confinement type",
    },
    "usMoOverdueForHearing": {
      "nextReviewDate": 2023-10-02T00:00:00.000Z,
    },
  },
  "externalId": "004",
  "ineligibleCriteria": {},
  "metadata": {
    "bedNumber": "03",
    "buildingNumber": "13",
    "cdvsSinceLastHearing": [],
    "complexNumber": "2",
    "currentFacility": "FACILITY 01",
    "housingUseCode": "HOS",
    "majorCdvs": [
      {
        "cdvDate": 2022-02-20T00:00:00.000Z,
        "cdvRule": "Rule 7.2",
      },
    ],
    "mostRecentHearingComments": "Reason for Hearing: 30 day review",
    "mostRecentHearingDate": 2022-09-03T00:00:00.000Z,
    "mostRecentHearingFacility": "FACILITY NAME",
    "mostRecentHearingType": "hearing type",
    "numMinorCdvsBeforeLastHearing": 3,
    "restrictiveHousingStartDate": 2022-10-01T00:00:00.000Z,
    "roomNumber": "05",
  },
  "stateCode": "US_MO",
}
`;

exports[`transform record 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usMoInRestrictiveHousing": {
      "confinementType": "confinement type",
    },
  },
  "externalId": "004",
  "ineligibleCriteria": {
    "usMoOverdueForHearing": {
      "nextReviewDate": 2023-11-03T00:00:00.000Z,
    },
  },
  "metadata": {
    "bedNumber": "03",
    "buildingNumber": "13",
    "cdvsSinceLastHearing": [],
    "complexNumber": "2",
    "currentFacility": "FACILITY 01",
    "housingUseCode": "HOS",
    "majorCdvs": [
      {
        "cdvDate": 2022-02-20T00:00:00.000Z,
        "cdvRule": "Rule 7.2",
      },
    ],
    "mostRecentHearingComments": "Reason for Hearing: 30 day review",
    "mostRecentHearingDate": 2022-09-03T00:00:00.000Z,
    "mostRecentHearingFacility": "FACILITY NAME",
    "mostRecentHearingType": "hearing type",
    "numMinorCdvsBeforeLastHearing": 3,
    "restrictiveHousingStartDate": 2022-10-01T00:00:00.000Z,
    "roomNumber": "05",
  },
  "stateCode": "US_MO",
}
`;

exports[`transform record 2`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usMoInRestrictiveHousing": {
      "confinementType": "confinement type",
    },
    "usMoOverdueForHearing": {
      "nextReviewDate": 2023-10-03T00:00:00.000Z,
    },
  },
  "externalId": "004",
  "ineligibleCriteria": {},
  "metadata": {
    "bedNumber": "03",
    "buildingNumber": "13",
    "cdvsSinceLastHearing": [],
    "complexNumber": "2",
    "currentFacility": "FACILITY 01",
    "housingUseCode": "HOS",
    "majorCdvs": [
      {
        "cdvDate": 2022-02-20T00:00:00.000Z,
        "cdvRule": "Rule 7.2",
      },
    ],
    "mostRecentHearingComments": "Reason for Hearing: 30 day review",
    "mostRecentHearingDate": 2022-09-03T00:00:00.000Z,
    "mostRecentHearingFacility": "FACILITY NAME",
    "mostRecentHearingType": "hearing type",
    "numMinorCdvsBeforeLastHearing": 3,
    "restrictiveHousingStartDate": 2022-10-01T00:00:00.000Z,
    "roomNumber": "05",
  },
  "stateCode": "US_MO",
}
`;

exports[`transform record 3`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usMoInRestrictiveHousing": {
      "confinementType": "confinement type",
    },
  },
  "externalId": "004",
  "ineligibleCriteria": {
    "usMoOverdueForHearing": {
      "nextReviewDate": undefined,
    },
  },
  "metadata": {
    "bedNumber": "03",
    "buildingNumber": "13",
    "cdvsSinceLastHearing": [],
    "complexNumber": "2",
    "currentFacility": "FACILITY 01",
    "housingUseCode": "HOS",
    "majorCdvs": [
      {
        "cdvDate": 2022-02-20T00:00:00.000Z,
        "cdvRule": "Rule 7.2",
      },
    ],
    "mostRecentHearingComments": "Reason for Hearing: 30 day review",
    "mostRecentHearingDate": 2022-09-03T00:00:00.000Z,
    "mostRecentHearingFacility": "FACILITY NAME",
    "mostRecentHearingType": "hearing type",
    "numMinorCdvsBeforeLastHearing": 3,
    "restrictiveHousingStartDate": 2022-10-01T00:00:00.000Z,
    "roomNumber": "05",
  },
  "stateCode": "US_MO",
}
`;

exports[`transform record 4`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "usMoInRestrictiveHousing": {
      "confinementType": "confinement type",
    },
  },
  "externalId": "004",
  "ineligibleCriteria": {
    "usMoOverdueForHearing": {},
  },
  "metadata": {
    "bedNumber": "03",
    "buildingNumber": "13",
    "cdvsSinceLastHearing": [],
    "complexNumber": "2",
    "currentFacility": "FACILITY 01",
    "housingUseCode": "HOS",
    "majorCdvs": [
      {
        "cdvDate": 2022-02-20T00:00:00.000Z,
        "cdvRule": "Rule 7.2",
      },
    ],
    "mostRecentHearingComments": "Reason for Hearing: 30 day review",
    "mostRecentHearingDate": 2022-09-03T00:00:00.000Z,
    "mostRecentHearingFacility": "FACILITY NAME",
    "mostRecentHearingType": "hearing type",
    "numMinorCdvsBeforeLastHearing": 3,
    "restrictiveHousingStartDate": 2022-10-01T00:00:00.000Z,
    "roomNumber": "05",
  },
  "stateCode": "US_MO",
}
`;
